--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html lang="en">
 
 <head>
+    <script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "LocalBusiness",
+  "name" : "BlockStava",
+  "image" : "https://felipeanselmodasilva16081996.github.io/Projeto-Site/logobs.svg",
+  "telephone" : "para",
+  "address" : {
+    "@type" : "PostalAddress",
+    "streetAddress" : "de"
+  },
+  "openingHoursSpecification" : {
+    "@type" : "OpeningHoursSpecification",
+    "dayOfWeek" : {
+      "@type" : "DayOfWeek",
+      "name" : "Copyright"
+    }
+  }
+}
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
