--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
 
 <head>
-  <script type="application/ld+json">
-{
+<script type="application/ld+json">
+[ {
   "@context" : "http://schema.org",
-  "@type" : "QAPage",
-  "mainEntity" : {
-    "@type" : "Question",
-    "acceptedAnswer" : {
-      "@type" : "Answer",
-      "text" : "..."
-    },
-    "suggestedAnswer" : {
-      "@type" : "Answer",
-      "url" : "https://felipeanselmodasilva16081996.github.io/Projeto-Site/#"
-    }
-  }
-}
+  "@type" : "Dataset",
+  "name" : "Inicio",
+  "description" : "...",
+  "temporalCoverage" : "Buscar",
+  "spatialCoverage" : "essencial",
+  "version" : "desempenho"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Dataset",
+  "temporalCoverage" : "de",
+  "identifier" : "Android"
+} ]
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
