--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   "name" : "Inicio",
   "description" : "...",
   "temporalCoverage" : "Buscar",
-  "spatialCoverage" : "essencial",
+  "version" : "desempenho"
+}, {
+  "@context" : "http://schema.org",
+  "@type" : "Dataset",
+  "name" : "Inicio",
+  "description" : "essencial",
+  "temporalCoverage" : "Buscar",
   "version" : "desempenho"
 }, {
   "@context" : "http://schema.org",
